FEAT: Added Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 bezkoder.app.jwtSecret= tyndaSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+bezkoder.app.jwtExpirationMs= 7200
