--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ bezkoder.app.jwtExpirationMs= 7200
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-server.base_path=D:\Musics
+tynda.base_musics_path=D:\Musics
+tynda.base_image_path=D:\Images
