FIX: Added endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 bezkoder.app.jwtSecret= tyndaSecretKey
-bezkoder.app.jwtExpirationMs= 7200
+bezkoder.app.jwtExpirationMs= 3600000
 
 # Configure Multipart File for Servlet
 spring.servlet.multipart.max-file-size=20MB
